fixed broken website

--- a/website.html
+++ b/website.html
@@ -32,7 +32,7 @@
             at the coffee bar to talk about adoption.
           </p>
         </div>
-        <img src="" width="350px" height="467px" />
+        <img src="https://drive.google.com/uc?export=view&id=1L7nxKE9vngzbtqfN_AXVsj5D42wOS_BG" alt="Cat Picture" width="350px" height="467px" />
       </div>
     </section>
     <section class="footer">
@@ -40,10 +40,10 @@
         <p>Coded by Jen Beltran - Copyright 2021</p>
         <div class="icons-section">
           <a href="https://www.linkedin.com/" target="_blank">
-            <img src="" width="35px" height="35px" />
+            <img src="https://drive.google.com/uc?export=view&id=1WKer-g4hR-iOFjUei4XW13ZFQ-JaCHj0" alt="linkein" width="35px" height="35px" />
           </a>
           <a href="https://mail.google.com/" target="_blank">
-            <img src="" width="35px" height="35px" />
+            <img src="https://drive.google.com/uc?export=view&id=19j_fLX8673HhGmSIf_qZ5Nhj1tLqyYT8" alt="gmail" width="35px" height="35px" />
           </a>
         </div>
       </div>
